modificaciones en el la interaccion del chat con el cliente
